dont break input with validation fixes #1073

--- a/github-dark.css
+++ b/github-dark.css
@@ -13,10 +13,7 @@
   input, textarea {
     color: #bebebe;
   }
-  input[type="date"], input[type="datetime-local"], input[type="email"],
-  input[type="file"], input[type="number"], input[type="password"],
-  input[type="search"], input[type="tel"], input[type="text"],
-  input[type="time"], input[type="url"] {
+  input {
     background: #181818;
   }
   svg {
